[project]
name 		= 'nn_simulator'
version 	= '2.0.1'
authors		= [
    { name = 'Paolo Baldini', email	= 'paolobaldini01@gmail.com' }
]
description	= 'Simulator for a nanowire-network with memristive behaviour'
classifiers	= [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.9',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Artificial Life'
]

[project.urls]
"GitHub"	= 'https://github.com/Mandrab/nanowire-network-simulator'

[build-system]
requires	= [
    'matplotlib',
    'more-itertools',
    'networkx',
    'numpy',
    'scipy',
    'setuptools'
]
build-backend 	= "setuptools.build_meta"

